--- a/css/main.css
+++ b/css/main.css
@@ -148,16 +148,6 @@ main {
     border-radius: 11px;
 }
 
-.input_type form {
-    position: relative;
-    width: 458px;
-    height: 52px;
-    margin: 10px auto;
-    border-radius: 12px;
-    border: 1px solid #E5E7EB;
-    background: #F9FAFB;
-}
-
 .main-sec-1 {
     background: url("../img/sec-1.jpg") no-repeat center center / cover;
     height: 716px;
@@ -169,12 +159,35 @@ main {
     max-width: 680px;
     text-align: center;
     padding-bottom: 10px;
-    padding-top: 150px;
+    padding-top: 30px;
     margin: 0 auto;
 }
 
 .main-sec-1_text h4 {
     margin-bottom: 20px;
+}
+
+.hidden {
+    display: none;
+}
+
+#pythagorean{
+    margin: 0 auto;
+    border-collapse: collapse;
+    border: 1px solid whitesmoke;
+}
+td{
+    border: 1px solid whitesmoke;
+    padding: 10px;
+    text-align: center;
+    transition: background-color 0.2s ease;
+}
+.highlight{
+    background-color: lightslategray;
+}
+
+.color-changed{
+    color: cornflowerblue;
 }
 
 .main-sec-2 {
@@ -196,22 +209,6 @@ main {
     align-items: stretch;
     gap: 57px;
     margin-top: 50px;
-}
-
-.sec-2_left label, input {
-    margin: 10px 0;
-}
-
-input {
-    height: 30px;
-    width: 350px;
-    background-color: #F9FAFB;
-    color: var(--black);
-    padding-left: 5px;
-}
-
-input:hover {
-    border: blueviolet solid 5px;
 }
 
 .main-sec-3 {
