--- a/css/main.css
+++ b/css/main.css
@@ -229,3 +229,10 @@ td{
 .sec-3_left {
     margin-top: 100px;
 }
+
+#random-img{
+    width: 300px;
+    height: 500px;
+    display: block;
+    margin: 0 auto;
+}
